backend/vulnerability_analysis/testing/hof2/full/klee-out-0/test000002.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strcpy.c
Line: 27
assembly.ll line: 12437
State: 1
Stack: 
	#000012437 in strcpy(139351698702336, 139575037001728) at libc/string/strcpy.c:27
	#100008260 in hash_input(139020986220544) at final_tc/hof5_klee.c:37
	#200008637 in __klee_posix_wrapped_main() at final_tc/hof5_klee.c:70
	#300006113 in __user_main(1, 140246662512640, 140246662512656) at src/runtime/POSIX/klee_init_env.c:245
	#400000567 in __uClibc_main(140230883540992, 1, 140246662512640, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000732 in main(1, 140246662512640)
Info: 
	address: 139351698702346
	next: object at 139001121996800 of size 4
		MO7574[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
